--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   http: ^1.1.0
   shared_preferences: ^2.2.0
   go_router: ^10.0.0
   loading_animation_widget: ^1.2.0+4
   flutter_riverpod: ^2.3.6
+  rflutter_alert: ^2.0.7
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logoSMK.png
+    - assets/images/pattern.png
     - assets/images/homeIcon.png
     - assets/images/iconHome.png
     - assets/images/profileIcon.png
