--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,8 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   flutter_riverpod: ^2.3.6
   rflutter_alert: ^2.0.7
-  flutter_secure_storage: ^8.0.0
+  provider: ^6.0.5
+  # flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
